Correcting spacing and adding rule styles.

--- a/public/css/global.styl
+++ b/public/css/global.styl
@@ -41,7 +41,7 @@ h1
   font-weight 100
   text-transform uppercase
   letter-spacing:19px
-  margin 40px 0 30px 0
+  margin 40px 0 0 0
 
 h2
   color #692323
@@ -92,3 +92,12 @@ ul.social-media
       background-position -72px 0px
       &:hover
         background-position -72px -21px
+
+hr
+  border none
+  border-top 1px solid #ddd
+  margin-bottom 10px
+
+#footer
+  hr
+    margin-top 68px
